--- a/SimpleWebServer/Website/Pages/Demo/buttonclick.html
+++ b/SimpleWebServer/Website/Pages/Demo/buttonclick.html
@@ -3,14 +3,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <script src="../../Scripts/jquery-3.3.1.min.js"></script>
+    <script src="/Scripts/jquery-3.3.1.min.js"></script>
     <link type="text/css" rel="Stylesheet" href="/CSS/demo.css"/>
     <title>Button Click Demo</title>
     
     <script type="text/javascript">
         $(document).ready(function () {
-            $("#me").click(function () {
-                alert("I've been clicked!");
+            $("#redirect").click(function () {
+                alert("clicked!");
             });
         });
     </script>
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="center-inner top-margin-50">
-        <input class="button" type="submit" value="Redirect" id="redirect" name="redirectButton"/>
+        <input class="button" type="button" value="Click here" id="redirect"/>
     </div>
 </body>
 </html>
